# edge-testbed

./: .ansible-lint  .gitignore  .gitlab-ci.yml  Makefile  README.md  ansible.cfg  ci-cli.Dockerfile  edge-testbed-architecture.drawio  pyproject.toml
ansible-builder/: entrypoint  execution-environment.yml
ansible-builder/ssh/: ssh_config
ansible-builder/vpn/: ansible_runner.conf  ansible_runner.crt  ansible_runner.key  ca.crt  ta.key
ansible-lint/rules/: input_variable_naming_rule.py
cli/: README.md  pyproject.toml
cli/src/itm_cli/: main.py
cli/src/itm_cli/cluster/: common.py  main.py  projects.py
cli/src/itm_cli/configuration/: common.py  consts.py  main.py
cli/src/itm_cli/configuration/keys/: enums.py
cli/src/itm_cli/configuration/security/: main.py
cli/src/itm_cli/utils/: auxiliary.py  common.py  initial.py  typer_augmentations.py
cli/src/sli/: main.py
cli/src/sli/awx_cluster/: configuration.py  main.py  projects.py
cli/src/sli/cloud_server/: main.py
cli/src/sli/cloud_server/vpn/: main.py
cli/src/sli/cluster/: main.py  projects.py
cli/src/sli/configuration/: common.py  consts.py  main.py
cli/src/sli/configuration/keys/: enums.py
cli/src/sli/configuration/security/: main.py
cli/src/sli/master_nuc/: main.py
cli/src/sli/utils/: ansible.py  auxiliary.py  common.py  consts.py  initial.py  logging.py  styling.py
inventories/: hosts
inventories/group_vars/: all.yml  cloud-server.yml
playbooks/awx/: backup_users.yml  get_admin_pwd.yml  get_url.yml  sync_project.yml
playbooks/cloud-server/: vpn-setup.yml  (+3 more)
roles/: requirements.yml
(+164 files in other folders)
